--- a/HovyFridge/app/src/main/res/layout/activity_main.xml
+++ b/HovyFridge/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/textView"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.budiyev.android.codescanner.CodeScannerView
+            android:layout_width="match_parent" android:layout_height="400dp"
+            android:id="@+id/scanner_view"
+            app:autoFocusButtonColor="@color/white"
+            app:autoFocusButtonVisible="true"
+            app:flashButtonColor="@color/white"
+            app:flashButtonVisible="true"
+    />
+
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:layout_below="@id/scanner_view"
+              android:layout_centerHorizontal="true"
+              android:layout_margin="20dp"
+              android:text="Scan food!"
+              android:textColor="@color/black"/>
+
+</RelativeLayout>
