--- a/HovyFridge/app/src/main/res/layout/fragment_product_details_fridge.xml
+++ b/HovyFridge/app/src/main/res/layout/fragment_product_details_fridge.xml
@@ -1,13 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.product_details.fridge.ProductDetailsFridgeFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.product_details.ProductDetailsFragment">
 
-    <TextView
-        android:id="@+id/product_details_fridge"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/product_details"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        app:cardElevation="1dp"
+        app:cardCornerRadius="15dp"
+        app:contentPadding="20dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/fridge_product_details_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="25sp"
+                android:text="@string/product_name"/>
+
+            <TextView
+                android:id="@+id/fridge_product_details_barcode_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fridge_product_details_name"
+                android:text="@string/bar_code"/>
+
+            <TextView
+                android:id="@+id/fridge_product_details_barcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/fridge_product_details_barcode_label"
+                app:layout_constraintTop_toBottomOf="@+id/fridge_product_details_name"
+                android:layout_marginLeft="10dp"
+                android:text=""/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
