Permission request, and progress bars

--- a/HovyFridge/app/src/main/res/layout/detailed_fridge_fragment.xml
+++ b/HovyFridge/app/src/main/res/layout/detailed_fridge_fragment.xml
@@ -49,18 +49,20 @@
                 tools:context=".ui.fridge_details.DetailedFridgeFragment"
                 tools:listitem="@layout/item_fridge_product" />
 
-            <ProgressBar
-                android:id="@+id/detailed_fridge_fragment_progress_bar_loading"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ProgressBar
+            android:id="@+id/detailed_fridge_fragment_progress_bar_loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 
     </com.google.android.material.card.MaterialCardView>
 
