--- a/HovyFridge/app/src/main/res/layout/fridges_list_fragment.xml
+++ b/HovyFridge/app/src/main/res/layout/fridges_list_fragment.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/main_card_test"
@@ -28,5 +29,17 @@
             tools:context=".ui.fridges_list.FridgesListFragment"
             tools:listitem="@layout/item_fridge" />
 
+        <ProgressBar
+            android:id="@+id/progress_bar_loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </com.google.android.material.card.MaterialCardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
