--- a/HovyFridge/app/src/main/res/layout/fragment_product_details_fridge.xml
+++ b/HovyFridge/app/src/main/res/layout/fragment_product_details_fridge.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.product_details.ProductDetailsFragment">
+    tools:context=".presentation.ui.product_details.ProductDetailsFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/product_details"
@@ -44,10 +44,77 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@+id/fridge_product_details_barcode_label"
                 app:layout_constraintTop_toBottomOf="@+id/fridge_product_details_name"
-                android:layout_marginLeft="10dp"
-                android:text=""/>
+                android:layout_marginStart="10dp"
+                />
+
+            <TextView
+                android:id="@+id/fridge_product_details_added_datetime_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fridge_product_details_barcode"
+                android:text="@string/added_at"/>
+
+            <TextView
+                android:id="@+id/fridge_product_details_added_datetime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/fridge_product_details_added_datetime_label"
+                app:layout_constraintTop_toTopOf="@+id/fridge_product_details_added_datetime_label"
+                android:layout_marginStart="10dp"
+                />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/product_details_amount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="1dp"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="20dp"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/product_details">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/amount_of_product_slider_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="25sp"
+                android:text="@string/amount_of_product"/>
+
+            <TextView
+                android:id="@+id/amount_of_product_slider_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/amount_of_product_slider_label"
+                app:layout_constraintTop_toTopOf="@+id/amount_of_product_slider_label"
+                android:textSize="25sp"
+                android:layout_marginStart="10dp"
+                tools:text="10 %"/>
+
+            <SeekBar
+                android:id="@+id/amount_of_product_slider"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:valueFrom="0"
+                android:max="100"
+                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/amount_of_product_slider_value">
+            </SeekBar>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
