--- a/HovyFridge/app/src/main/res/layout/fridges_list_fragment.xml
+++ b/HovyFridge/app/src/main/res/layout/fridges_list_fragment.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="LinearLayoutManager"
-            tools:context=".ui.fridges_list.FridgesListFragment"
+            tools:context=".presentation.ui.fridges_list.FridgesListFragment"
             tools:listitem="@layout/item_fridge" />
 
         <ProgressBar
