--- a/HovyFridge/app/src/main/res/layout/item_fridge_product.xml
+++ b/HovyFridge/app/src/main/res/layout/item_fridge_product.xml
@@ -29,7 +29,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/ic_cucumber" />
+                android:src="@drawable/ic_cucumber"
+                app:tint="@color/design_default_color_primary_variant"/>
 
 
             <TextView
